should fix display issues on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ a {
 }
 h1 {
     font-size: 3em;
+    margin: 1em;
     /* font-family:'Helvetica', 'Arial', 'Sans-Serif'; */
 }
 h2 {
@@ -25,7 +26,7 @@ h2 {
     /* width: 70%; */
     /* font-family:'Helvetica', 'Arial', 'Sans-Serif'; */
 }
-p {
+p, ul {
     font-size: 1.5em;
     /* font-family:'Helvetica', 'Arial', 'Sans-Serif'; */
     line-height: 1.4em;
@@ -51,13 +52,19 @@ footer {
     margin: 0 auto;
     padding: 50px;
     width: 70%;
+    font-size: 1.2em;
+}
+.content-large {
+    margin: 0 auto;
+    padding: 50px;
+    width: 70%;
     font-size: 1.5em;
 }
 .content-bold {
     margin: 0 auto;
     padding: 50px;
     width: 70%;
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: bold;
 }
 ul.posts {
@@ -101,7 +108,7 @@ div.a {
 }
 
 .bgimg-3 {
-    background-image: url("../assets/images/IMG_0242.png");
+    background-image: url("../assets/images/IMG_0242_2.png");
     min-height: 100%;
 }
 
